# polytrader

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.hermes  MISSION  Makefile  README.md
deploy/: verify
deploy/k8s/base/: hermes.yaml  kustomization.yaml  namespace.yaml  polytrader.yaml  postgres-backup-secret.example.yaml  postgres-backup.yaml  secrets.yaml
deploy/k8s/base/ngrok/: polytrader-agentendpoint.yaml
deploy/k8s/base/postgres/: cluster.yaml
deploy/scripts/: deploy-docker-desktop.sh
docs/: project-plan.md
migrations/: 20260525100000_init_polytrader.sql  20260527100000_journal_events.sql  20260613000000_market_resolution.sql  20260629120000_market_taker_fee.sql  20260701060000_events_latest_per_market_index.sql  20260701150000_orderbook_market_outcome_index.sql  20260701160000_retention_rollup_tables.sql  20260704090000_directional_universe.sql  20260704100000_negrisk_event_grouping.sql  20260721160000_ladder_watchlist.sql
src/: config.rs  db.rs  main.rs  server.rs
src/backtest/: mod.rs
src/clob/: authenticated.rs  live_sender.rs  mod.rs
src/exits/: mod.rs
src/gc/: mod.rs
src/ingester/: clob_public.rs  gamma.rs  mod.rs
src/journal/: mod.rs  models.rs  writer.rs
src/paper/: engine.rs  mod.rs  models.rs
src/risk/: mod.rs
src/rotation/: ladder.rs  mod.rs
src/strategy/: arbitrage.rs  external.rs  mod.rs  negrisk.rs  overreaction.rs  theta.rs  weights.rs
src/ui/: app.rs  mod.rs
wiki/: architecture.md  index.md  log.md  roadmap.md  schema.md
wiki/concepts/: hermes-self-improvement.md  llm-maintained-project-wiki.md  polymarket-trading.md
wiki/decisions/: 2026-05-25-adopt-multi-signal-fusion-from-btc-bot.md  2026-05-25-data-ingester-enhancements-for-3-1.md  2026-05-25-hermes-fusion-learning-loop.md  2026-05-25-no-official-simulation-use-custom-paper-trader.md  2026-05-25-operational-goals-risk-cadence-for-small-capital.md  2026-05-25-port-market-making-liquidity-from-poly-maker.md  README.md  real-order-approval-flow.md
wiki/experiments/: README.md
wiki/integrations/: polymarket-apis-and-data-sources.md
wiki/runbooks/: README.md  build-test-deploy.md  deploy-public-ngrok.md  k8s-diagnostics.md  l2-private-key-secrets.md
wiki/sources/: polymarket-api.md
wiki/strategies/: ai-edge-kelly.md  fees-tax-latency-and-execution-tiers.md  goals-and-operational-cadence.md  market-making-liquidity.md  multi-signal-fusion.md  short-horizon-momentum.md
